--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,22 +6,22 @@
   <title>{{ page.title }}</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
-  <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
-  <link rel="stylesheet" href="/bootstrap/css/bootstrap-responsive.css">
+  <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.css">
 
   <!-- syntax highlighting CSS -->
-  <link rel="stylesheet" href="/css/syntax.css">
+  <link rel="stylesheet" href="css/syntax.css">
   <!-- Google webfont link -->
 <link href='http://fonts.googleapis.com/css?family=Arvo:700|Titillium+Web:900' rel='stylesheet' type='text/css'>
 
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <script src="/assets/jquery-1.10.0.js"></script>
 
-  <script type="text/javascript" src='/bootstrap/js/bootstrap.js'></script>
-  <script type="text/javascript" src='/assets/custom.js'></script>
+  <script type="text/javascript" src='bootstrap/js/bootstrap.js'></script>
+  <script type="text/javascript" src='assets/custom.js'></script>
 
 </head>
 <body class="{{ page.cssclass }}">
