Updating to 663f6be201fa1f369bff5e12b21ebfdad675e726.

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body.homepage { 
 	/* pattern from subtle patterns */
-	background-image: url('{{relative}}assets/fabric_1.png');
+	background-image: url('./assets/fabric_1.png');
 }
 
 .container { margin-bottom: 40px;}
