--- a/css/main.css
+++ b/css/main.css
@@ -41,3 +41,43 @@ span.big {
 	padding-left: 3px;
 	padding-top: 10px;
 }
+
+
+
+.panel {
+margin-bottom: 20px;
+background-color: #fff;
+border: 1px solid transparent;
+border-radius: 4px;
+-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.05);
+box-shadow: 0 1px 1px rgba(0,0,0,0.05);
+}
+
+.panel-heading {
+padding: 10px 15px;
+border-bottom: 1px solid transparent;
+border-top-right-radius: 3px;
+border-top-left-radius: 3px;
+}
+
+.panel-title {
+margin-top: 0;
+margin-bottom: 0;
+font-size: 16px;
+color: inherit;
+}
+
+.panel-body {
+padding: 15px;
+}
+
+.panel-primary {
+border-color: #428bca;
+}
+
+
+.panel-primary>.panel-heading {
+color: #fff;
+background-color: #428bca;
+border-color: #428bca;
+}
