--- a/_layouts/session.html
+++ b/_layouts/session.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="page-header">
-  <h1>{{page.title }} <small>{{ page.strapline}}</small></h1>
+	<a href ="/contents/"><img src="/assets/code61_logo_66x66.png" ></a><h1>{{page.title }} <small>{{ page.strapline}}</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
